# donatello

./: .gitignore  Readme.md  postgres.sh  pyproject.toml  requirements.txt
Donatello/: manage.py
Donatello/Api/: models.py  urls.py
Donatello/Api/management/commands/: populate_deputies.py
Donatello/Api/migrations/: 0001_initial.py
Donatello/Donatello/: asgi.py  settings.py  wsgi.py
diputados/: scrapy.cfg
diputados/diputados/: items.py  operational_parser.py  pipelines.py  settings.py
diputados/diputados/spiders/: __init__.py
diputados/diputados1/: items.py  middlewares.py  pipelines.py  settings.py
diputados/diputados1/spiders/: __init__.py
donatello/Donatello/Api/: serializers.py  views.py
donatello/Donatello/Donatello/: settings.py  urls.py
parser/: metadata_parser.py  operational_parser.py
scrapper/: Readme.md  const.py  diputados.py  main.py  operational.py  parser.py  profile.py  urls.py  utils.py
