[tool.poetry]
name = "donatello"
version = "0.1.0"
description = "Herramienta creada para mejorar la visibilidad de los datos de transparencia de la camara de diputados de Chile"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
